syntax = "proto3";

package proto;

option go_package = "/proto;proto";
option java_multiple_files = true;
option java_package = "proto";

service Hello {
	//服务端流式
	rpc SayHellostream_server (HelloRequest) returns (stream HelloReply);
	//客户端流式
	rpc SayHellostream_client (stream HelloRequest) returns (HelloReply);
	//双向端流式
	rpc SayHellostream (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
	string name = 1;
}
message HelloReply {
	string reply = 1;
}
